# soffio

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  Cargo.toml  LICENSE  README.md  README.zh.md  SECURITY.md  SECURITY.zh.md  SUPPORT.md  SUPPORT.zh.md  build.rs  deny.toml  docker-compose-dev.yml  docker-compose.yml  redocly.yaml  soffio.toml.example  tsconfig.json
.cargo/: config.toml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  hygiene-weekly.yml  release.yml
.sqlx/: query-00127327ad567aac080f22ce5b855625fc1c0d25fdfb8d15da0f740efd6c3cd2.json  query-06d05bc2aab86fecf715f086242a1e308dfa4bc5c21512a37dbf778abe4747c9.json  query-07e52e6b98de5bdb331dc4d87cdce3d86c7adee180095d8595d3cf20e3a5b532.json  query-098a6f11d15e5e0bcf54dece24cb8c9f790af238ce0e19608412e7dc25afc857.json  query-115225c8992fb43a4399443d8634957720a3909c7a82d6d13d20221f671210b2.json  query-115a309353569cdab40769ca02c73e9cd448596ae38bb249853ca9a3bf090edb.json  query-12433c132308aaa1fd2d6364e723d7475a45e05c98cdcd6ade54e7a9ba75c12d.json  query-141c50188e1ef269238e6fee293ee2fb1c9837a2557dbfed8df2d09c519184eb.json  query-145c3fd2443bba285b86ef84dd10c0a467b733b29d8b28652d08b7ee84a49df3.json  query-1467081c9fb515c5f328a348ea812257141d8281e97f9ed8c0fd505cb6685cd7.json  query-14831476f2e763728e74ccc2192aaa08f1a1c55396144ef562eeeb14767dd5da.json  query-1792516939e98a24300a7459b4a72c0f9bce56019ebaf4a52d0d28d5f601f9d0.json  query-1ed95d2eb3ecaec50fff87e068d0215d8e21daf0b46648e30e87defc98e8fa19.json  query-1f79566fe4bec8537681e493f694e09bb7b076ed00952f7b289181be07c9eb95.json  query-23ed1202e9592787a257d2e28bd896829aa820e9e403e138eb5e51a3c2287d7c.json  query-245fe90b53f05f8f3a6e6111a11a41f581d38616aebd5ec9351d5a3c88bab68a.json  query-283b15f0559fde120565ce8116bcec27d2d32f1b56d0eb314f78908041b99d00.json  query-2935cd7dad54a2ea224598e67a580f3720aabd923008d317869ed750013b8a8a.json  query-29fb7127f08301b8fbd7a336004a71ea8071db4ce66778a0da80b44fed0e2f4f.json  query-311e86d4f8ae4ab6ddb366c218684d6f66ecdb162714f0d3ce2daa43a421011a.json  query-31a99e6b47de7bed009399847c1e3724604344ddeeb273879e8bba15abb6800b.json  query-34777ab81ccd8ed3ea34d342b7d08f3450fa7d2801aca709a70ad4f2084b0998.json  query-39be643ed29ee01656e0c41b0678eb7c0347eddf8539b9dcdec08b3df1d1cd5e.json  query-3a036262b6923da0d13b1cd22e74d1f3936094e2abcb42a910929543e952d6b0.json  query-3ad3f9ce37c8ac802e4127b5d500c768815de462c64f7b0131fae114beb160c4.json  query-3f10c46d2017397b8b423a41fe752c0da461dd726cc38f3147dfc222cda5fd95.json  query-4177f718af79f558906a26df86221316ea40f5b52d3e81ecf0b69db1360e7221.json  query-42d70a33819e3b5e601f392f5f656153cc952193582d74c90ead06089e3e8467.json  query-43069327d28b7076aeff2e3b9d3662719ef961bded85c7348201deaeb21f7a24.json  query-44e3124efd21ecd4a6b5aee8a33d9f5e49ae44efde14364f8f283984d849ac09.json  query-467ac2372dfd991f3292e66e48dc4afd4172d5075d8c30725f8e27d416c5d585.json  query-47287ba4b439b3f81642d569d080a23f1f8a8c57f39dbc7ad5e14c72460af631.json  query-4901b45083cec1b0cf9b479affea20ca34f4f6f9896cd28da5cd0c8017d8f38e.json  query-496ecbdedc3e29168580a818bf6405770cf79d5a923dd4e82d6eee199c08a244.json  query-4b3a2be44178343d915efc6f4df9f46fc204e8eb5551c994d2c387d763457ef4.json  query-514488b4dbf14e03484f4a119a099a2c2d529c78a10fcae9ca26b2bf9bacc4a2.json  query-540e5bf3048c5dd639e919a4cb2cbb010b1e4cb3e0a7d89aa64d652e8a3abee1.json  query-5b294515eed0184aa84f58690e0c2935aa78e5f2cc76a1e3b998bd1deb92c4d4.json  query-5d906bb6c90f961d64ca1a9ead22ee2f369046041752d85dbabf12b54d3ae3a4.json  query-6363f20a78904e3b77ec2eb22272d6f85ea9c50ff82591dc1c3ed22c71799421.json  (+63 more)
build_support/: incremental.rs
crates/soffio-api-types/: Cargo.toml
crates/soffio-api-types/src/: lib.rs
crates/soffio-cli/: Cargo.toml
crates/soffio-cli/src/: args.rs  client.rs  main.rs  tests.rs
crates/soffio-cli/src/args/: commands.rs  value_enums.rs
crates/soffio-cli/src/args/commands/: api_keys.rs  audit.rs  jobs.rs  navigation.rs  pages.rs  posts.rs  settings.rs  snapshots.rs  tags.rs  uploads.rs
crates/soffio-cli/src/handlers/: api_keys.rs  mod.rs  navigation.rs  pages.rs  posts.rs  settings.rs  tags.rs  uploads.rs
deploy/docker/: Dockerfile  Dockerfile.build  entrypoint-gosu.sh  entrypoint-su.sh  mmdc-wrapper.sh  puppeteer.config.json  setup-mirrors.sh
deploy/mirrors/: common.sh
docs/: cli.md  cli.zh.md
docs/admin/: api-keys.md
docs/adr/: 2026-02-06-module-decomposition-plan.md
docs/api/: openapi.yaml
docs/cache/: 01_current_state.md  02_cleanup_map.md  03_new_design.md  04_rollout_plan.md  candidates.md  (+3 more)
migrations/: 20251101094500_consolidated_schema.down.sql  20251101094500_consolidated_schema.up.sql  20251102193323_add_upload_metadata.down.sql  20251102193323_add_upload_metadata.up.sql  20251103113000_add_post_section_render_flags.down.sql  20251103113000_add_post_section_render_flags.up.sql  20251201100000_add_api_keys.down.sql  20251201100000_add_api_keys.up.sql  20251210120000_remove_invalidate_cache_jobs.down.sql  20251210120000_remove_invalidate_cache_jobs.up.sql  20251210130000_add_snapshots.down.sql  20251210130000_add_snapshots.up.sql  20251215100000_remove_warm_cache_jobs.up.sql  20260206130000_add_upload_query_indexes.down.sql  20260206130000_add_upload_query_indexes.up.sql  20260427120000_update_default_product_copy.down.sql  20260427120000_update_default_product_copy.up.sql
scripts/: assert-static-elf.sh  db-preflight.sh  gate-fast.sh  gate-full-local.sh  gate-full.sh  gate-hygiene.sh  live-preflight.sh  nextest-full.sh
seed/: seed.toml
src/: lib.rs  main.rs  migrations_tool.rs
templates/: base.html  error.html  index.html  page.html  post.html  shell.html
tests/: admin_dashboard_metrics.rs  admin_panels.rs  api.rs  api_keys.seed.toml  build_script_incremental.rs  cache_consistency.rs  cache_metrics.rs  cli_end_to_end.rs  db_indexes.rs  gfm_snapshot.rs  live_api.rs  live_cache.rs  snapshots.rs
(+529 files in other folders)
