[package]
name = "soffio"
version = "0.1.15-alpha.1"
edition = "2024"

[[bin]]
name = "soffio-cli"
path = "src/bin/soffio_cli/main.rs"

[dependencies]
askama = "0.14"
axum = { version = "0.8", features = ["macros", "multipart"] }
datastar = { version = "0.3", features = ["axum"] }
async-stream = "0.3"
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.15"
slug = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
time = { version = "0.3", features = ["macros", "formatting", "serde"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1.43"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2"
pinyin = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "macros", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }
async-trait = "0.1"
base64 = "0.22"
ammonia = "4"
apalis = { version = "0.7", default-features = false, features = ["limit", "tracing"] }
apalis-cron = { version = "0.7", default-features = false }
apalis-sql = { version = "0.7", default-features = false, features = ["postgres"] }
comrak = { version = "0.49", default-features = false, features = ["syntect"] }
cron = "0.15"
once_cell = "1"
syntect = { version = "5.3", default-features = false, features = ["default-themes", "html", "parsing", "regex-fancy"] }
include_dir = "0.7.4"
mime_guess = "2.0.5"
bytes = "1.11.0"
lol_html = "2.7"
http-body-util = "0.1"
sha2 = "0.10"
chrono-tz = { version = "0.10.4", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
futures = "0.3"
axum-extra = { version = "0.12.2", features = ["multipart"] }
katex = "0.4.6"
imagesize = "0.14"
toml = { version = "0.9", features = ["parse", "display"] }
hex = "0.4"
dashmap = "6.1"
tempfile = "3.23"
subtle = "2.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
lru = "0.16.2"

[dev-dependencies]
insta = { version = "1.44", features = ["glob"] }
tower = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
httpmock = "0.8"
assert_cmd = "2"
predicates = "3"

[build-dependencies]
walkdir = "2"
syntect = { version = "5.3", default-features = false, features = ["default-themes", "html", "parsing", "regex-fancy"] }
two-face = { version = "0.4.5" }

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"
