[package]
name = "soffio-api-types"
version = "0.1.16-alpha.7"
edition = "2024"

[features]
default = []
sqlx = ["dep:sqlx"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3.46", features = ["macros", "formatting", "serde"] }
uuid = { version = "1.22.0", features = ["serde", "v4"] }
sqlx = { version = "0.8", default-features = false, features = ["postgres", "time", "uuid", "derive"], optional = true }
