[package]
name = "soffio-api-types"
version = "0.1.17-alpha.3"
edition = "2024"
description = "Shared request and response types for the Soffio headless publishing API."
license = "BSD-2-Clause"
repository = "https://github.com/xfyyzy/soffio"
homepage = "https://soffio.xfyyzy.xyz"
keywords = ["soffio", "api", "publishing", "types", "rust"]
categories = ["api-bindings", "web-programming"]

[features]
default = []
sqlx = ["dep:sqlx"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3.46", features = ["macros", "formatting", "serde"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }
sqlx = { version = "0.8", default-features = false, features = ["postgres", "time", "uuid", "derive"], optional = true }
