[package]
name = "soffio-cli"
version = "0.1.16-alpha.4"
edition = "2024"

[[bin]]
name = "soffio-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive", "env"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "multipart", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
soffio-api-types = { path = "../soffio-api-types" }
thiserror = "2.0"
time = { version = "0.3.46", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
url = "2"
uuid = { version = "1.22.0", features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd = "2"
httpmock = "0.8"
predicates = "3"
tempfile = "3.26"
