[package]
name = "soffio-cli"
version = "0.1.17-alpha.2"
edition = "2024"
description = "Command-line automation client for the Soffio headless publishing API."
license = "BSD-2-Clause"
repository = "https://github.com/xfyyzy/soffio"
homepage = "https://soffio.xfyyzy.xyz"
keywords = ["soffio", "publishing", "cli", "automation", "markdown"]
categories = ["command-line-utilities"]

[[bin]]
name = "soffio-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "multipart", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
soffio-api-types = { path = "../soffio-api-types", version = "0.1.17-alpha.2" }
thiserror = "2.0"
time = { version = "0.3.46", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
url = "2"
uuid = { version = "1.23.0", features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd = "2"
httpmock = "0.8"
predicates = "3"
tempfile = "3.27"
